<resources>
    <string name="app_name">Logica app</string>
    <string name="conjunction_and">Conjunction(AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="F1">F</string>
    <string name="T1">T</string>
    <string name="T2">T</string>
    <string name="T3">T</string>
    <string name="F2">F</string>
    <string name="F3">F</string>
    <string name="T4">T</string>
    <string name="F4">F</string>
    <string name="submit">submit</string>
    <string name="aantalGoed"> je hebt %d goed</string>

</resources>
